--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Depends:
     R (>= 4.2)
 Imports:
     terra,
+    magrittr,
     dplyr,
     tidyr,
     raster,
@@ -32,7 +33,8 @@ Imports:
     scico,
     ncmeta,
     here,
-    ggplot
+    ggplot2,
+    lubridate
 Suggests:
     knitr,
     rmarkdown,
