--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,9 @@ Imports:
     ncmeta,
     here,
     ggplot2,
-    lubridate
+    lubridate,
+    viridis,
+    rnaturalearth
 Suggests:
     knitr,
     rmarkdown,
