--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,9 @@ export(plot_map4)
 export(prepare_setup_sofun)
 export(read_nc_onefile)
 export(write_nc2)
+import(dplyr)
+import(ggplot2)
+importFrom(grDevices,colorRampPalette)
 importFrom(magrittr,"%>%")
+importFrom(methods,as)
+importFrom(stats,setNames)
