--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,9 @@ Imports:
     ggplot2,
     lubridate,
     viridis,
-    rnaturalearth
+    rnaturalearth,
+    ncdf4,
+    stringr
 Suggests:
     knitr,
     rmarkdown,
