--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_alpha)
 export(align_events)
+export(analyse_modobs2)
 export(calc_patm)
 export(calc_vp)
 export(calc_vp_inst)
@@ -15,6 +16,7 @@ export(gc_rsofun_driver_era5)
 export(get_consecutive)
 export(nc_to_df)
 export(plot_map4)
+export(plot_map_simpl)
 export(prepare_setup_sofun)
 export(read_nc_onefile)
 export(write_nc2)
