--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Imports:
     rnaturalearth,
     ncdf4,
     stringr,
-    ggthemes
+    ggthemes,
+    khroma
 Suggests:
     knitr,
     rmarkdown,
