--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(plot_map4)
 export(plot_map_simpl)
 export(prepare_setup_sofun)
 export(read_nc_onefile)
+export(regrid_df)
 export(write_nc2)
 import(dplyr)
 import(ggplot2)
