--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,9 @@ Suggests:
     knitr,
     rmarkdown,
     covr,
-    testthat
+    testthat,
+    xtable,
+    readr
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
